cmake_minimum_required(VERSION 3.10)
project(spareduck VERSION 0.1.0)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true ./src/*.hpp ./src/*.cpp)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3 -Wall -msse2 -mssse3")
add_executable(spareduck_test ${SOURCES})
add_executable(spareduck ${SOURCES})
set_target_properties(spareduck PROPERTIES LINK_FLAGS "--bind -s ENVIRONMENT=\"web\" -s WASM=1 -s ALLOW_MEMORY_GROWTH=1 -s MODULARIZE=1 -s EXPORT_NAME=\"spareduck\" -s LLD_REPORT_UNDEFINED -s ASSERTIONS=1")
set_target_properties(spareduck PROPERTIES COMPILE_FLAGS "-msimd128")
set_target_properties(spareduck_test PROPERTIES COMPILE_FLAGS "-DTESTING")

