set(test_binary spareduck_test)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true ../src/*.h ../src/*.cpp)
file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)
set(sources ${SOURCES})
set(test_sources ${TEST_SOURCES})
set(CMAKE_CXX_FLAGS "-DTESTING")
add_library(spareduck_lib STATIC ${sources})
add_executable(${test_binary} ${test_sources})
add_test(NAME ${test_binary} COMMAND ${test_binary})
target_link_libraries(${test_binary} PUBLIC spareduck_lib)
