cmake_minimum_required(VERSION 3.10)
project(spareduck_test)
set(test_binary spareduck_test)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true ../src/*.hpp ../src/*.cpp)
file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.hpp *.cpp)
set(sources ${SOURCES})
set(test_sources ${TEST_SOURCES})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O3 -DTESTING -DCATCH_CONFIG_FAST_COMPILE -Wall -msse2 -mssse3")
add_library(spareduck_lib STATIC ${sources})
add_executable(${test_binary} ${test_sources})
add_test(NAME ${test_binary} COMMAND ${test_binary})
target_link_libraries(${test_binary} PUBLIC spareduck_lib)
